# news-feed-pipeline

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
docker/mongo_server/: docker-compose.yml
docker/prefect_server/: docker-compose.yml
docker/worker/: Dockerfile.Worker  docker-compose.yml
docker/worker_image/: Dockerfile
docs/: advanced_configuration.md  api_reference.md  architecture.md  development_guide.md  future_improvements.md  index.md
scripts/: install_dependencies.sh  install_docker.sh
src/: deploy.py  serve.py
src/api/: main.py
src/api/html/: index.html
src/api/html/static/css/: styles.css
src/api/html/static/js/: app.js
src/core/: __init__.py  config.py  topic_dictionary.py
src/fetch/: __init__.py  factory.py  fetcher.py
src/fetch/fetchers/: news_api_fetcher.py
src/flows/: news_pipeline.py
src/persistence/: __init__.py  database.py  factory.py
src/persistence/mongo/: connection.py  mongo_database.py
src/process/: process_data.py
src/schemas/: __init__.py  schemas.py
