[project]
name = "ai-news-feed"
version = "0.1.0"
description = "Simple AI news feed"
authors = [
    {name = "Leslie Ricardo de la Rosa", email = "leslie_ricardo@hotmail.com"},
]
dependencies = [
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings[dotenv]>=2.10.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.4",
    "prefect>=3.2.15",
    "prefect-docker>=0.6.3",
    "motor>=3.7.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.14.1"
]

requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.2.0",
]

[tool.pdm.scripts]
start_mongo_server = "docker compose -f docker/mongo_server/docker-compose.yml up -d"
stop_mongo_server = "docker compose -f docker/mongo_server/docker-compose.yml down"
start_prefect_server = "prefect server start --background"
stop_prefect_server = "prefect server stop"
start_news_pipeline = "python3 src/serve.py "
stop_news_pipeline = "pkill -f 'python3 src/serve.py'"
start_web_server = "uvicorn src.api.main:app --reload"
stop_web_server = "pkill -f 'uvicorn src.api.main:app'"
lint = "ruff check ."
format = "ruff format ."

[tool.ruff]
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "N", "W", "B", "C4", "PL", "RUF"]

# Ignore specific rules
ignore = [
    "E203",  # Whitespace before ':' - conflicts with black
    "PLR0913",  # Too many arguments to function call
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"